Fixed gap

--- a/src/styles/blocks/contact-us.scss
+++ b/src/styles/blocks/contact-us.scss
@@ -1,10 +1,17 @@
 .contact-us {
-  display: grid;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 
   @include on-tablet {
-    grid-template-columns: 1fr 1fr;
+    flex-direction: row;
+    gap: 24px;
   }
 
+  @include on-tablet {
+    flex-direction: row;
+    gap: 200px;
+  }
   .info {
     display: flex;
     flex-direction: column;
